# Automated-Loan-Processing-Agent

./: README.md  main.py  pyproject.toml
app/: main.py
app/agents/: ocr_agent.py  risk_agent.py  validation_agent.py
app/routes/: analyze.py  test_llm.py  upload.py
app/services/: llm_service.py
