[project]
name = "automated-loan-processing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
